test/corpus/includes.txt
================================================================================
Simple package include
================================================================================

\usepackage{amsmath}

--------------------------------------------------------------------------------

(source_file
  (package_include
    (curly_group_path_list
      (path))))

================================================================================
Package include with two paths
================================================================================

\usepackage{amsmath,lipsum}

--------------------------------------------------------------------------------

(source_file
  (package_include
    (curly_group_path_list
      (path)
      (path))))

================================================================================
Package include with options
================================================================================

\usepackage[foo=.5\textwidth, bar baz]{qux}

--------------------------------------------------------------------------------

(source_file
  (package_include
    (brack_group_key_value
      (key_value_pair
        (text
          (word))
        (value
          (text
            (number)
            (generic_command
              (command_name)))))
      (key_value_pair
        (text
          (word)
          (word))))
    (curly_group_path_list
      (path))))

================================================================================
Simple class include
================================================================================

\documentclass{amsmath}

--------------------------------------------------------------------------------

(source_file
  (class_include
    (curly_group_path
      (path))))

================================================================================
Class include with two paths
================================================================================

\documentclass{amsmath,lipsum}

--------------------------------------------------------------------------------

(source_file
  (class_include
    (curly_group_path
      (path)
      (MISSING "}")))
  (text
    (word))
  (ERROR))

================================================================================
Class include with options
================================================================================

\documentclass[foo=.5\textwidth, bar baz]{qux}

--------------------------------------------------------------------------------

(source_file
  (class_include
    (brack_group_key_value
      (key_value_pair
        (text
          (word))
        (value
          (text
            (number)
            (generic_command
              (command_name)))))
      (key_value_pair
        (text
          (word)
          (word))))
    (curly_group_path
      (path))))

================================================================================
Simple LaTeX include
================================================================================

\input{foo.tex}

--------------------------------------------------------------------------------

(source_file
  (latex_include
    (curly_group_path
      (path))))

================================================================================
Empty LaTeX include
================================================================================

\input{}

--------------------------------------------------------------------------------

(source_file
  (ERROR))

================================================================================
BibLaTeX glob include
================================================================================

\addbibresource[glob]{foo.{1,2,3}.bib}

--------------------------------------------------------------------------------

(source_file
  (biblatex_include
    (brack_group_key_value
      (key_value_pair
        (text
          (word))))
    (curly_group_glob_pattern
      (glob_pattern))))

================================================================================
BibTeX include with absolute path
================================================================================

\bibliography{/home/user/foo.bib}

--------------------------------------------------------------------------------

(source_file
  (bibtex_include
    (curly_group_path_list
      (path))))

================================================================================
Graphics include with options
================================================================================

\includegraphics[scale=0.5,angle=45]{test}

--------------------------------------------------------------------------------

(source_file
  (graphics_include
    (brack_group_key_value
      (key_value_pair
        (text
          (word))
        (value
          (text
            (number))))
      (key_value_pair
        (text
          (word))
        (value
          (text
            (number)))))
    (curly_group_path
      (path))))
